--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,13 @@
     "store": "0.x",
     "messages": "1.x",
     "docs": "0.x",
-    "node": "6.x"
+    "node": "6.x",
+    "admin": "0.x"
   },
   "dependencies": {
     "vtex.store": "2.x",
-    "vtex.rich-text": "0.x"
+    "vtex.rich-text": "0.x",
+    "vtex.styleguide": "9.x"
   },
   "routes": {
     "v1/fortune": {
@@ -25,5 +27,14 @@
   "categories": [
     "storefront"
   ],
+  "admin": {
+    "pages": [
+      {
+        "path": "admin/fortune-cookies",
+        "title": "Fortune Cookies",
+        "component": "AdminFortune"
+      }
+    ]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
