--- a/node/package.json
+++ b/node/package.json
@@ -7,10 +7,11 @@
     "@vtex/api": "6.48.0"
   },
   "devDependencies": {
-    "@types/node": "12.20.55",
+    "@types/body-parser": "1.19.2",
     "@types/express": "4.17.13",
     "@types/express-serve-static-core": "4.17.13",
-    "@types/body-parser": "1.19.2"
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/node": "12.20.55"
   },
   "resolutions": {
     "@types/express": "4.17.13",
